--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* Created by: Mohamad
+* Created on: Sep 2023
+* This file contains the CSS for index.html
+*/
 /* Due to error in MDL : https://github.com/google/material-design-lite/issues/5281
 */
 .mdl-ripple {
