--- a/css/style2.css
+++ b/css/style2.css
@@ -1,8 +1,7 @@
 /* Created by: Mohamad
 * Created on: Sep 2020
 * This file contains the CSS for index2.html
-*/
-/* Due to error in MDL : https://github.com/google/material-design-lite/issues/5281
+Due to error in MDL : https://github.com/google/material-design-lite/issues/5281
 */
 .mdl-ripple {
   background: #000;
